# university---db

./: .gitignore  CMakeLists.txt  Employee.cpp  Employee.hpp  Menu.cpp  Menu.hpp  Person.cpp  Person.hpp  README.md  Student.cpp  Student.hpp  Univeristy.cpp  Univeristy.hpp  University.cpp  University.hpp  catch_amalgamated.cpp  main.cpp  main1.cpp  menu.cpp  menu.hpp  student.cpp  student.hpp  test.cpp  test.csv  univeristy.cpp  univeristy.hpp  university-db.csv
.github/workflows/: main.yml
